[package]
name = "num-chrono-duration"
version = "0.1.0"
edition = "2018"
authors = ["yassun4dev <yassun4dev@outlook.com>"]
repository = "https://github.com/yassun4dev/num-chrono-duration.git"
description = "Provide a convenient way to create `chrono::Duration` from numbers."
keywords = ["duration"]
license = "MIT"

[dependencies]
chrono = "=0.4.24"
num-traits = "0.2.14"
